data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4208.wast
;; 7. **Test Description**: Validate a scenario where `call_indirect` within a nested loop checks for valid and invalid table indices, confirming proper boundary handling and error trapping.    - *Constraint Checked*: Table index validity and nested loop integrity.    - *Infinite Loop Context*: Handling of invalid indices should prevent nested loops from infinite execution.

(assert_invalid
  (module
    (type $sig (func (param i32)))
    (func $valid_func (param i32))
    (table 1 funcref (elem $valid_func))
    (func $test_nested_loops
      (i32.const 2)  ;; Invalid index
      (loop
        (call_indirect (type $sig) (i32.const 2))
        (call_indirect (type $sig) (i32.const 0))  ;; Valid index
        (br 0)
      )
    )
  )
  "out of bounds table index"
)